# binserve

./: Cargo.toml
.github/workflows/: build.yml
src/cli/: interface.rs  messages.rs
src/core/: config.rs  engine.rs  files.rs  routes.rs  server.rs  templates.rs  watcher.rs
