[package]
    name    = "binserve"
    version = "0.2.1"
    edition = "2024"

[dependencies]
    actix-files = "0.6.0"
    actix-web = { version = "4.5.1", features = [
        "rustls-0_23",
    ] }
    rustls = "0.23.0"
    actix-web-lab = "0.24.0"
    ahash = "0.8.8"
    anyhow = "1.0.57"
    clap = { version = "4.5.1", features = [
        "derive",
    ] }
    colored = "3.0.0"
    compact_str = "0.9.0"
    dashmap = "6.0.0"
    env_logger = "0.11.2"
    etag = { version = "4.0.0", features = [
        "std",
    ] }
    handlebars = "6.0.0"
    jwalk = "0.8.1"
    minify-html-onepass = "0.16.0"
    notify-debouncer-mini = "0.7.0"
    num_cpus = "1.13.1"
    once_cell = { version = "1.12.0", features = [
        "parking_lot",
    ] }
    parking_lot = "0.12.1"
    rustls-pemfile = "2.1.0"
    serde = { version = "1.0.137", features = [
        "derive",
    ] }
    serde_json = "1.0.81"
    mime_guess2 = "2.3.1"

[profile.release]
    opt-level       = 3
    codegen-units   = 1
    panic           = "abort"
    lto             = "thin"
    debug           = false
    incremental     = false
    overflow-checks = false
